# phylo-tree

./: README.md  index.html  package-lock.json  package.json  webpack.config.js
scripts/: infoDetail.json  make-detail-json.py  pyproject.toml
src/: DetailInfo.js  Footer.js  MainGraph.js  PhyloTree.js  PhyloTreeStyles.css  Utils.js  index.js
