[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["MooGoo <moogoo78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.4"
pykew = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
